# EIEN65---Mech-project

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: avr.c  controller.c  main.c  serialexample.c
